0.0.7 (Pending)

0.0.6 (June 5, 2010)
* Fixed: Correctly fixed the default value of iml.local_repository_env_override setting to
  match documentation.

0.0.5 (June 5, 2010)
* Changed: The documentation indicated that the iml.local_repository_env_override value
  defaulted to nil while the code defaulted the value to M2_REPO. The code was changed to
  Use $MAVEN_REPOSITORY$ to match the behaviour of IDEA 9.x.
* Added: Dependencies that are not in the maven repository or in projects where
  iml.local_repository_env_override is set nil will now have paths relative to the
  module directory.
* Added: Ability to disable generation of content section using iml.skip_content!
* Fixed: A project which is tagged with no_iml may have a child with an IML.
* Changed: Directories that are outside content dir are no longer excluded in the content
  section.

0.0.4 (May 29, 2010)
* Added: Ability to disable ipr generation using project.no_ipr
* Added: Documented the ability to disable the generation of iml files via project.no_iml 